--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -601,16 +601,16 @@
   }
   .md-typeset .admonition.circle-info,
   .md-typeset details.circle-info {
-    border-color: rgb(131, 174, 238);
+    border-color: rgb(180, 205, 243);
   }
   .md-typeset .circle-info > .admonition-title,
   .md-typeset .circle-info > summary {
     color:rgb(238, 236, 231);
-    background-color: rgba(24, 27, 196, 0.863);
+    background-color: rgba(15, 31, 71);
   }
   .md-typeset .circle-info > .admonition-title::before,
   .md-typeset .circle-info > summary::before {
-    background-color: rgb(247, 189, 32);
+    background-color: rgb(241, 197, 74);
     -webkit-mask-image: var(--md-admonition-icon--circle-info);
             mask-image: var(--md-admonition-icon--circle-info);
   }
